# tp-lab-6

./: .travis.yml  CMakeLists.txt  Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  Factory.cpp  Factory.h  Manager.cpp  Manager.h  Personal.cpp  Personal.h  README.md  employees.txt  files.txt  main.cpp  projects.txt  roster.txt  staff.txt  test.cpp  workers.txt
Data/: projects.csv  stuff.csv
ext/: preview.txt
ext/gtest-1.8.0/googlemock/: CHANGES  README.md
ext/gtest-1.8.0/googlemock/msvc/2005/: gmock.sln
ext/gtest-1.8.0/googlemock/msvc/2010/: gmock.sln  gmock.vcxproj  gmock_config.props  gmock_main.vcxproj  gmock_test.vcxproj
ext/gtest-1.8.0/googlemock/msvc/2015/: gmock.sln  gmock.vcxproj  gmock_config.props  gmock_main.vcxproj  gmock_test.vcxproj
ext/gtest-1.8.0/googletest/codegear/: gtest.cbproj  gtest.groupproj  gtest_main.cbproj  gtest_unittest.cbproj
ext/gtest-1.8.0/googletest/docs/: Primer.md  V1_5_Primer.md  V1_5_XcodeGuide.md  V1_6_Primer.md  V1_7_Primer.md
ext/gtest-1.8.0/googletest/msvc/: gtest-md.sln  gtest.sln
ext/gtest-1.8.0/googletest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
ext/gtest-1.8.0/googletest/xcode/gtest.xcodeproj/: project.pbxproj
file/: project.csv  staff.csv
include/: AbstractClasses.h  Abstracts.h  Cleaner.h  Company.h  CompanyCreation.h  CompanyCreator.h  Create.h  Driver.h  Employee.h  EmployeeFactory.h  Employees.h  Engineer.h  Engineers.h  Enterprise.h  Fabric.h  Factory.h  General.h  Generators.h  Headers.h  Heading.h  HeadingPayment.h  IHeadEmployee.h  IHeading.h  IProject.h  IProjectEmployee.h  IT_project.h  IWorkTime.h  IWorkTimeEmployee.h  InfProject.h  Interface.h  Interfaces.h  Job.h  MainClasses.h  Manager.h  Managers.h  Personal.h  Personals.h  Pesonal.h  Positions.h  Progect.h  (+56 more)
include/Classes/Abstract/: Employee.h  Engineer.h  Personal.h
include/Classes/Common/: Cleaner.h  Driver.h  Manager.h  Programmer.h  Project.h  ProjectManager.h  SeniorManager.h  TeamLeader.h  Tester.h
include/Extra/: Helper.h
include/Factory/: CleanerFactory.h  DriverFactory.h  Factory.h  ManagerFactory.h  ProgrammerFactory.h  ProjectManagerFactory.h  SeniorManagerFactory.h  TeamLeaderFactory.h  TesterFactory.h
include/Interfaces/: Heading.h  Projects.h  WorkTime.h
src/: AbstractClasses.cpp  Abstracts.cpp  Cleaner.cpp  Company.cpp  Company.h  CompanyCreation.cpp  CompanyCreator.cpp  Create.cpp  Creator.cpp  Driver.cpp  Employee.cpp  Employee.txt  EmployeeFactory.cpp  Employees.cpp  Engineer.cpp  Engineers.cpp  Engineers.h  Enterprise.cpp  FIOgroup.txt  Factory.cpp  General.cpp  InfProject.cpp  Job.cpp  Lab6.cpp  Main.cpp  MainClasses.cpp  Manager.cpp  NewCompany.txt  Personal.cpp  Pesonal.cpp  Positions.cpp  Programmer.cpp  Project.cpp  ProjectBudget.cpp  ProjectManager.cpp  ProjectTeam.cpp  Projects.cpp  Projects.txt  SeniorManager.cpp  Source.cpp  (+54 more)
src/Classes/Abstract/: Employee.cpp  Engineer.cpp  Personal.cpp
src/Classes/Common/: Cleaner.cpp  Driver.cpp  Manager.cpp  Programmer.cpp  Project.cpp  ProjectManager.cpp  SeniorManager.cpp  TeamLeader.cpp  Tester.cpp
src/Extra/: Helper.cpp
src/Factory/: CleanerFactory.cpp  DriverFactory.cpp  Factory.cpp  ManagerFactory.cpp  ProgrammerFactory.cpp  ProjectManagerFactory.cpp  SeniorManagerFactory.cpp  TeamLeaderFactory.cpp  TesterFactory.cpp
src/Interfaces/: Heading.cpp  Projects.cpp  WorkTime.cpp
src/data/: staff_names.txt
test/: CleanerTests.cpp  DriverTests.cpp  EmployeeFactoryTests.cpp  ManagerTests.cpp  PersonalTests.cpp  ProgrammerTests.cpp  ProjectManagerTests.cpp  ProjectStuffTests.cpp  SeniorManagerTests.cpp  TeamLeaderTests.cpp  TesterTests.cpp  input.txt  test.cpp  tests.cpp
txt/: ceos.txt  projects.txt  workers.txt
